# codexcw

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .goreleaser.yaml  .justfile  .lintstagedrc.cjs  .markdownlint.jsonc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  account_usage.go  account_usage_test.go  claude.go  claude_account_usage.go  claude_account_usage_test.go  claude_test.go  commitlint.config.cjs  decoder.go  deny.toml  devbox.json  doc.go  docker-compose.yml  errors.go  events.go  go.mod  godoc_test.go  group.go  lychee.toml  package.json  pnpm-lock.yaml  request.go  runner.go  runner_test.go  usage_collab_test.go
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: codexcw-expert.md
.codex/skills/codexcw/: SKILL.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-crate.yml  release-go.yml  release-npm.yml  release-nuget.yml  release-pypi.yml
bindings/node/: Cargo.toml  README.md  binding.d.ts  binding.js  index.d.ts  index.js  index.mjs  package-lock.json  package.json
bindings/node/__test__/: smoke.test.mjs
bindings/node/__test__/fixtures/: fake-claude.sh
bindings/node/npm/darwin-arm64/: README.md  package.json
bindings/node/npm/darwin-x64/: README.md  package.json
bindings/node/npm/linux-arm64-gnu/: README.md  package.json
bindings/node/npm/linux-arm64-musl/: README.md  package.json
bindings/node/npm/linux-x64-gnu/: README.md  package.json
bindings/node/npm/linux-x64-musl/: README.md  package.json
bindings/node/npm/win32-x64-msvc/: README.md  package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/codexcw/: __init__.py  _codexcw.pyi  aio.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_smoke.py
bindings/python/tests/fixtures/: fake_claude.sh
cmd/codexcw/: main.go
crates/codexcw/: Cargo.toml  README.md
crates/codexcw/examples/: run.rs
crates/codexcw/src/: account_usage.rs  args.rs  claude.rs  claude_account_usage.rs  decoder.rs  error.rs  event.rs  group.rs  lib.rs  request.rs  runner.rs  session.rs  tail.rs
crates/codexcw/tests/: account_usage_it.rs  claude_account_usage_it.rs  runner_it.rs
crates/codexcw/tests/common/: mod.rs
docs/: README.md  architecture.md
docs/examples/: README.md  csharp.md  go.md  python.md  rust.md  typescript.md
dotnet/: .editorconfig  Codexcw.slnx  Directory.Build.props
dotnet/Codexcw/: AccountUsage.cs  ClaudeAccountUsage.cs  ClaudeArgs.cs  ClaudeDecoder.cs  CodexArgs.cs  CodexDecoder.cs  Codexcw.csproj  Errors.cs  Events.cs  Group.cs  Json.cs  JsonlReader.cs  README.md  Request.cs  Runner.cs  Session.cs  TailBuffer.cs
dotnet/Codexcw.Tests/: AccountUsageTests.cs  ArgsTests.cs  BackpressureTests.cs  BufferAndReaderTests.cs  ClaudeDecoderTests.cs  ClaudeRunnerTests.cs  CodexDecoderTests.cs  Codexcw.Tests.csproj  GroupTests.cs  HardeningTests.cs  RunnerTests.cs  StderrDrainTests.cs  TestSupport.cs
dotnet/Codexcw.Tests/fixtures/: fake_codex.sh
internal/buildinfo/: buildinfo.go
internal/cli/: root.go  run.go  run_test.go  version.go
