[workspace]
resolver = "2"
members = ["crates/codexcw", "bindings/node", "bindings/python"]

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.90"
license = "CC0-1.0"
repository = "https://github.com/c3-oss/codexcw"
homepage = "https://github.com/c3-oss/codexcw"
authors = ["c3-oss"]

[workspace.dependencies]
codexcw = { path = "crates/codexcw", version = "0.2.0" }
tokio = { version = "1", default-features = false, features = [
  "process",
  "io-util",
  "rt",
  "rt-multi-thread",
  "sync",
  "macros",
  "time",
] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec", "rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
thiserror = "2"
tempfile = "3"

[profile.release]
lto = true
strip = true
