[package]
name = "codexcw-node"
description = "napi-rs bindings for the codexcw core."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
codexcw.workspace = true
napi = { version = "3", default-features = false, features = ["napi8", "tokio_rt"] }
napi-derive = "3"
tokio.workspace = true
tokio-stream.workspace = true

[build-dependencies]
napi-build = "2"
